--- a/xwang_cv.tex
+++ b/xwang_cv.tex
@@ -99,22 +99,22 @@
 \begin{tabular}{r|p{6.5in}}
 %\begin{tabular}{r|p{17.5cm}}
   %--------------------------------------------------------
-  \textsc{Sept. 2015}--     & Department of Physics and Astronomy, UCLA    |   \textbf{Towards Ph.D. in Astrophysics (Jun. 2019)}   \\
+  \textsc{Sept. 2015}--     & Department of Physics and Astronomy, UCLA    |   \textbf{towards Ph.D. in Astronomy and Astrophysics}   \\
   \textsc{Present}          & Field of Interest: Spatially Resolved Spectroscopy, Chemical Evolution of Galaxies, \\
                             & \hspace*{7.3em} Extragalactic Nebular Emission, Strong Gravitational Lensing. \\
-                            & \texttt{Advisors: Profs. Tucker A. Jones, Gabriel B. Brammer, Tommaso Treu, Keren Sharon}     \\
+                            & \texttt{Advisors: Profs. Tommaso Treu, Tucker A. Jones}     \\
   \multicolumn{2}{c}{} \\[\narrow]
   %--------------------------------------------------------
-  \textsc{Sept. 2013}--     & Physics Department, University of California, Santa Barbara    |   \textbf{M.A. in Physics (Jun. 2015)}   \\
-  \textsc{Sept. 2015}       & Graduate Course Cumulative GPA: 3.96     \\
+  \textsc{Sept. 2013}--     & Physics Department, University of California, Santa Barbara    |   \textbf{M.A. in Physics}   \\
+  \textsc{Jun. 2015}       & Graduate Course Cumulative GPA: 3.96     \\
   \multicolumn{2}{c}{} \\[\narrow]
   %--------------------------------------------------------
-  \textsc{Sept. 2010}--     & School of Astronomy and Space Sciences, Nanjing University  |  \textbf{M.Sc. in Astrophysics (Jun. 2013)}   \\
-  \textsc{May 2013}         & Field of Interest: Precision Cosmology, Galaxy Clusters, Gamma-ray Bursts. \\
+  \textsc{Sept. 2010}--     & School of Astronomy and Space Sciences, Nanjing University  |  \textbf{M.Sc. in Astrophysics}   \\
+  \textsc{Jun. 2013}         & Field of Interest: Precision Cosmology, Galaxy Clusters, Gamma-ray Bursts. \\
                             & \texttt{Advisors: Profs. Yong Feng Huang, Charling Tao, Gong-Bo Zhao}   \\
   \multicolumn{2}{c}{} \\[\narrow]
   %--------------------------------------------------------
-  \textsc{Sept. 2006}--     &   Department of Astronomy, Nanjing University  |  \textbf{B.Sc. in Astronomy (Jun. 2010)}    \\
+  \textsc{Sept. 2006}--     &   Department of Astronomy, Nanjing University  |  \textbf{B.Sc. in Astronomy}    \\
   \textsc{Jun. 2010}        &   Weighted Average Score: 84.64/100 (overall), 87.68/100 (major); Ranking: 2$^{\rm nd}$/26  \\
   %========================================================
 \end{tabular}
