ESO fellow submitted

--- a/xwang_cv.tex
+++ b/xwang_cv.tex
@@ -85,7 +85,7 @@
 \begin{tabular}{rl}
 %    \textsc{Date and Place of Birth:}       & September 1$^{\rm st}$, 1988  |  Tianjin, China \\
     \textsc{Current Status:}  & Graduate Student at University of California, Los Angeles \\
-    \textsc{E-mail, Cell:}  & \href{mailto:albertfxwang@gmail.com}{albertfxwang@gmail.com}  |  +1-805-574-0025 \\
+    \textsc{Email, Telephone:}  & \href{mailto:xwang@astro.ucla.edu}{xwang@astro.ucla.edu}  |  +1-805-574-0025 \\
     \textsc{Mailing Address:} & Department of Physics and Astronomy, UCLA, Los Angeles, CA, USA 90095-1547
 \end{tabular}
 
@@ -180,13 +180,13 @@
     \textsc{Jan. 2018}   &   \href{http://obs.carnegiescience.edu/talk_event/828}{\textbf{Colloquium talk}}, @ Carnegie Observatories, Pasadena, CA \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Sept. 2017}   &   \textbf{Invited talk}, @ Shanghai Jiao Tong University, Shanghai \\
+    \textsc{Sept. 2017}   &   \textbf{Invited talk}, @ Tsinghua University, Beijing \\
     \multicolumn{2}{c}{} \\
 
     \textsc{Sept. 2017}   &   \textbf{Invited talk}, @ Nanjing University, Nanjing \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Sept. 2017}   &   \textbf{Invited talk}, @ Tsinghua University, Beijing \\
+    \textsc{Sept. 2017}   &   \textbf{Invited talk}, @ Shanghai Jiao Tong University, Shanghai \\
     \multicolumn{2}{c}{} \\
 
     \textsc{Aug. 2017}   &   \textbf{Contributed talk}, @
@@ -205,17 +205,17 @@
     \textsc{Aug. 2016}   &   \textbf{Colloquium talk}, @ Department of Astronomy, University of Michigan, Ann Arbor, MI \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Jun. 2016}   &   \textbf{Invited talk}, @ National Astronomical Observatories of China, Beijing   \\
+    \textsc{Jul. 2016}   &   \textbf{Invited talk}, @ Tsinghua University, Beijing \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Jun. 2016}   &   \textbf{Invited talk}, @ Nanjing University, Nanjing \\
-    \multicolumn{2}{c}{} \\
+%    \textsc{Jun. 2016}   &   \textbf{Invited talk}, @ Nanjing University, Nanjing \\
+%    \multicolumn{2}{c}{} \\
 
     \textsc{Jun. 2016}   &   \textbf{Invited talk}, @ Purple Mountain Observatory, Nanjing \\
     \multicolumn{2}{c}{} \\
 
-%    \textsc{Jun. 2016}   &   \textbf{Invited talk}, @ Tsinghua University, Beijing \\
-%    \multicolumn{2}{c}{} \\
+    \textsc{Jun. 2016}   &   \textbf{Invited talk}, @ National Astronomical Observatories of China, Beijing   \\
+    \multicolumn{2}{c}{} \\
 
     \textsc{Aug. 2015}   &   \textbf{Contributed talk}, @ \href{http://hffiau.epfl.ch/page-116896.html}{Focus Meeting 22 at the XXIXth IAU General Assembly}, Honolulu, HI     \\
     \multicolumn{2}{c}{} \\
@@ -266,7 +266,8 @@
 %    \item[8]\hypertarget{}{} Strait, V., ..., \textbf{Wang, X.} et al. Mass and Light of Abell 370: A Strong and Weak Lensing Analysis. 2018, \textit{Astrophys. J.} submitted (\href{https://arxiv.org/abs/1805.08789}{arXiv:1805.08789})
 %    \item[7]\hypertarget{}{} Hoag, A., ..., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). VI. Comparing the Mass and Light in MACSJ0416.1-2403 using Frontier Field imaging and GLASS spectroscopy. 2016, \textit{Astrophys. J.}, 831, 182 (\href{https://arxiv.org/abs/1603.00505}{arXiv:1603.00505})
     \item[6]\hypertarget{}{} Morishita, T., Abramson, L. E., Treu, T., \textbf{Wang, X.} et al.  Metal Deficiency in Two Massive Dead Galaxies at z$\sim$2. 2018, \textit{Astrophys. J. Letters}, 856L, 4 (\href{https://arxiv.org/abs/1803.01852}{arXiv:1803.01852})
-    \item[5]\hypertarget{}{} Kelly, P. L., ..., \textbf{Wang, X.} et al. An individual star at redshift 1.5 extremely magnified by a galaxy-cluster lens. 2018, \textit{Nature Astronomy}, in press (\href{https://arxiv.org/abs/1706.10279}{arXiv:1706.10279})
+    \item[5]\hypertarget{}{} Kelly, P. L., ..., \textbf{Wang, X.} et al. An individual star at redshift 1.5 
+    extremely magnified by a galaxy-cluster lens. 2018, \textit{Nature Astronomy}, 2, 334 (\href{https://arxiv.org/abs/1706.10279}{arXiv:1706.10279})
     \item[4]\hypertarget{}{} Morishita, T., Abramson, L. E., Treu, T., Schmidt, K. B., Vulcani, B., \textbf{Wang, X.} Characterizing Intracluster Light in the Hubble Frontier Fields. 2017, \textit{Astrophys. J.}, 846, 139 (\href{https://arxiv.org/abs/1610.08503}{arXiv:1610.08503})
     \item[3]\hypertarget{}{} Treu, T., Schmidt, K. B., Brammer, G. B., Vulcani, B., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). I. Survey Overview and First Data Release. 2015, \textit{Astrophys. J.}, 812, 114 (\href{https://arxiv.org/abs/1509.00475}{arXiv:1509.00475})
     \item[2]\hypertarget{14.schmidt.apjl}{} Schmidt, K. B., Treu, T., Brammer, G. B., Bradac, M., \textbf{Wang, X.} et al. Through the Looking GLASS: HST Spectroscopy of Faint Galaxies Lensed by the Frontier Fields Cluster MACSJ0717.5+3745. 2014, \textit{Astrophys. J. Letters}, 782L, 36 (\href{http://arxiv.org/abs/1401.0532}{arXiv:1401.0532})
